--- a/frontends/pastebin/src/components/snippet-manager/snippet-toolbar.module.scss
+++ b/frontends/pastebin/src/components/snippet-manager/snippet-toolbar.module.scss
@@ -10,6 +10,7 @@
   position: relative;
   flex: 1;
   max-width: 520px;
+  min-width: 0;
 }
 
 .searchIcon {
